# xuanjing-sdk

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/skills/cpp17-recommended-syntax/: SKILL.md
.github/skills/software-engineering-laws/: SKILL.md
.github/workflows/: benchmarks.yml  ci.yml  security.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake
docs/: ALGORITHM_CONTRIBUTION_GUIDE.md  CHANGELOG_POLICY.md  CI_CD_QUICK_START.md  CI_CD_SETUP.md  CODING_STANDARDS.md  MILESTONES_M1_M2_M3.md  Neural_Rendering_Technology_Survey.md  PROJECT_STRUCTURE.md
docs/architecture/: sdk_architecture.md
docs/research/: EXPERIMENT_PROTOCOL.md  RESEARCH_AGENDA.md
docs/specs/: io_spec.md  module_goals_acceptance.md
modules/xuanjing-compiler/: CMakeLists.txt
modules/xuanjing-eval/: CMakeLists.txt  README.md
modules/xuanjing-eval/src/: eval_api_impl.cpp  eval_api_stub.cpp
modules/xuanjing-genframe/: CMakeLists.txt  README.md
modules/xuanjing-genframe/src/: genframe_api_stub.cpp
modules/xuanjing-model/: CMakeLists.txt  README.md
modules/xuanjing-model/src/: model_api_stub.cpp
modules/xuanjing-platform/: CMakeLists.txt  README.md
modules/xuanjing-platform/src/: platform_api_stub.cpp
modules/xuanjing-runtime/: CMakeLists.txt  README.md
modules/xuanjing-runtime/src/: pipeline_orchestrator.cpp  runtime_api_stub.cpp
modules/xuanjing-shader/: CMakeLists.txt  README.md
modules/xuanjing-shader/src/: shader_api_stub.cpp
modules/xuanjing-temporal/: CMakeLists.txt  README.md
modules/xuanjing-temporal/src/: temporal_api_stub.cpp
modules/xuanjing-tensor/: CMakeLists.txt  README.md
modules/xuanjing-tensor/src/: tensor_api_stub.cpp
modules/xuanjing-train/: CMakeLists.txt  README.md
modules/xuanjing-train/src/: train_api_stub.cpp
modules/xuanjing-upscale/: CMakeLists.txt  README.md
modules/xuanjing-upscale/src/: upscale_api_stub.cpp
samples/: CMakeLists.txt
samples/benchmark_runner/: benchmark_runner.cpp
samples/offline_replay/: offline_replay.cpp
tests/: CMakeLists.txt
tests/integration/: pipeline_integration_test.cpp
tests/perf/: shader_perf_benchmark.cpp
tools/: coverage.sh  download_onnx_only.sh  lint.sh  quality_benchmark.sh  setup-cicd.sh
(+11 files in other folders)
